# connect_k3_forever

./: .gitignore  .markdownlint.jsonc  .wordlist.txt  Cargo.toml  README.md
.github/workflows/: check_build.yaml  check_links.yaml  check_markdown.yaml  check_rust_style.yaml  check_spelling.yaml  measure_codecov.yaml
assets/development/: README.md
assets/history/: README.md
documentation/: README.md
src/: app.rs  app_state.rs  assets.rs  band.rs  colors.rs  game.cpp  game.h  game.rs  game_assets.rs  game_test.cpp  hair_color.rs  k3_color.rs  language.rs  main.rs  main_menu.rs  main_menu_component.rs  main_menu_start_button.rs  program_state.rs
