[package]
name = "connect_k3_forever"
version = "10.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1" }
partial_application = { version = "0.2.1" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
